# segmentation_spacem

./: README.md  pyproject.toml
configs/: LIVECell_clean_annotations_train.json  cellpose-models.yml
configs/vero/: macrophages_Bosurgi6.yml
example_project/: infer_cellpose.py  visualize-data-in-neuroglancer.ipynb
example_project/configs/infer/: main_v1.yml
experiments/alyona/2021-11-26/: infer.py
experiments/alyona/big-dataset-2022/: infer.py
experiments/finetuning_cyto2/: infer.py  make_comparison_plots.py  train.py
experiments/veronika_proj/: cellpose_infer.py
experiments/veronika_proj/configs/: cropped_images.yml  macrophages_Bosurgi6.yml
notebooks/: visualize_in_neuroglancer.ipynb
projects/BII-hackathon/initial-results/: infer_cellpose.py  make_plots.py
projects/alyona/2021-11-26/: train.py
projects/amandine/segm_15_03_2022/: infer_cellpose.py
projects/australian_project/2023-09-neuron-progenitors/: infer_cellpose.py
projects/australian_project/2023-09-neuron-progenitors-slide2/: infer_cellpose.py
projects/finetuning_cyto2/: make_comparison_plots.py  train.py
projects/gastrosome_full/: infer.py
projects/gastrosome_processing/: add_artificial_fiducials.py  create_binary_mask.py  infer_cellpose.py
projects/jeany/2023-02-HTpaper/: infer_cellpose.py
projects/old_configs/: LIVECell_clean_annotations_test.json
projects/veronika_proj/: cellpose_infer.py  compute_sem_segm.py  run_on_queue.batch
scripts/: convert_LIVECell_dataset_to_cellpose.py  infer-centermask.py  restructure_cellpose_dataset.py  select_clean_LIVECell_images.py
scripts/cellpose/: test_cellpose.py
scripts/infer_ancor/: demo_anchorbased.py  train_net.py
segmUtils/io/: export_images_from_zarr.py
segmUtils/postprocessing/: compare_and_plot_exp_predictions.py  compare_and_plot_segmentations.py  compute_scores.py  convert_to_hdf5.py  convert_to_zarr.py  make_bar_plot_scores.py
segmUtils/preprocessing/: convert_to_cellpose_style.py  preprocessing.py  preprocessing_v2.py
src/segmUtils/utils/: wait.py
(+59 files in other folders)
